--- a/05_LESSON/main.css
+++ b/05_LESSON/main.css
@@ -5,4 +5,16 @@ html{
 body{
     background-color: black;
     color: whitesmoke;
+} 
+
+a{
+    color: aliceblue;
+}
+
+a:visited{
+    color: lightgray;
+}
+
+a:hover.a:active{
+    color: #eee;
 }
